--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   },
   "dependencies": {
     "@openapi-generator-plus/typescript-express-passport-server-generator": "^2.4.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/passport": "^1.0.7",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
+    "cors": "^2.8.5",
     "express": "^4.18.0",
     "firebase-admin": "^10.1.0",
     "openapi-generator-plus": "^1.5.1",
-    "passport": "^0.5.2"
+    "passport": "^0.5.2",
+    "swagger-ui-express": "^4.3.0",
+    "yamljs": "^0.3.0"
   }
 }
